add parser for LL.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container theme-showcase" role="main">
       <div class="jumbotron">
         <h1>LL Toy</h1>
-        <p>⊸ <sup>⊥</sup> ⊗ 1 ⅋ ⊥ ＆ ⊤ ⊕ 0</p>
+        <p>A B C ⊸ <sup>⊥</sup> ⊗ 1 ⅋ ⊥ ＆ ⊤ ⊕ 0 ! ?</p>
       </div>
     </div>
     <div class="col-lg-6">
@@ -27,9 +27,11 @@
         </div>
         <input id="proposition-to-solve" type="text" value="A⊸A" class="form-control" aria-label="...">
         <span class="input-group-btn">
-          <button type="button" class="btn btn-primary">Start!</button>
+          <button id="start-proving" type="button" class="btn btn-primary">Start!</button>
         </span>
       </div>
+    </div>
+    <div id="proof-area" class="col-lg-6">
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
