--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </span>
       </div>
     </div>
+    <div id="proof-status" class="col-lg-6"></div>
     <div id="proof-area" class="col-lg-6">
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
