split JavaScript sources.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <div id="proof-area" class="container"></div>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="lltoy-proposition.js"></script>
+    <script src="lltoy-parser.js"></script>
+    <script src="lltoy-proof.js"></script>
+    <script src="lltoy-problems.js"></script>
     <script src="lltoy.js"></script>
   </body>
 </html>
