implement symbol buttons.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button id="select_linear_logic" type="button" class="btn btn-default">Linear Logic</button>
           </div>
         </div>
-        <p>A B C ⊸ <sup>⊥</sup> ⊗ 1 ⅋ ⊥ ＆ ⊤ ⊕ 0 ! ?</p>
+        <div id="symbol-buttons" class="btn-group btn-group-sm"></div>
         <div class="input-group">
           <div class="input-group-btn">
             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Proposition <span class="caret"></span></button>
@@ -48,6 +48,7 @@
     <div id="proof-status" class="container"></div>
     <div id="proof-area" class="container"></div>
     <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery.selection.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="lltoy-proposition.js"></script>
     <script src="lltoy-parser.js"></script>
